tests/ui/attributes/crate-type-macro-not-found.stderr
error: cannot find macro `foo` in this scope
  --> $DIR/crate-type-macro-not-found.rs:2:16
   |
LL | #[crate_type = foo!()]
   |                ^^^ consider moving the definition of `foo` before this call
   |
note: a macro with the same name exists, but it appears later
  --> $DIR/crate-type-macro-not-found.rs:4:14
   |
LL | macro_rules! foo {
   |              ^^^

error: aborting due to 1 previous error

